# EduSphere

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  fly-backend.toml  fly-frontend.toml  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/workflows/: backend-lint.yml  backend-test.yml  backend-type.yml  backend-types.yml  coverage.yml  docker-smoke.yml  frontend-lint.yml  lint.yml  test.yml
EduSphere/: asgi.py  settings.py  urls.py  wsgi.py
api/: urls.py  views.py
backend/: .gitignore  README.md  Readme.md  __main__.py  requirements.txt
backend/access/: __init__.py  actions.py  apps.py  backends.py  dtos.py  enums.py  forms.py  models.py  querysets.py  services.py  templates.py
backend/access/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0003_initial_permissions.py  0004_add_room_relations.py  0005_merge_0003_initial_0004_add_room_relations.py
backend/access/rules/: labels.py  permissions.py  predicates.py
backend/account/: actions.py  apps.py  choices.py  email.py  forms.py  managers.py  middleware.py  models.py  services.py  tasks.py  utils.py
backend/account/files/: paths.py  validators.py
backend/account/migrations/: 0001_initial.py
backend/account/rules/: labels.py  permissions.py  predicates.py
backend/account/tasks/: __init__.py  email.py  moderation.py
backend/api/: urls.py  views.py
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  env.py  production.py  staging.py
backend/core/: admin.py  apps.py  constants.py  consumers.py  enums.py  exceptions.py  forms.py  managers.py  middleware.py  models.py  mutations.py  permissions.py  queries.py  roles.py  routing.py  schema.py  subscriptions.py  tasks.py  templates.py  types.py  urls.py
backend/core/chat/: consumers.py  middleware.py  routing.py
backend/core/files/: validators.py
backend/core/graphql/: middleware.py  mutations.py  queries.py  schema.py  signals.py  types.py  utils.py
backend/core/migrations/: 0001_initial.py  0002_alter_message_body.py  0002_alter_message_body_alter_room_description_and_more.py  0002_alter_user_options_alter_user_avatar_and_more.py  0002_initial.py  0002_populate_permissions.py  0002_remove_room_unique_room_per_host_and_more.py  0002_report.py  0003_alter_topic_name.py  0003_message_edited.py  0003_report_unique_active_report_per_user_room.py  (+7 more)
backend/graphql/: api.py  apps.py  base.py  context.py  dataloaders.py  middleware.py  mutations.py  schema.py  security.py  signals.py  types.py  utils.py  view.py  views.py
backend/infra/: apps.py  middleware.py  urls.py
backend/invite/: __init__.py  actions.py  apps.py  choices.py  forms.py  models.py  querysets.py  services.py  utils.py
backend/messaging/: __init__.py  actions.py  apps.py  choices.py  forms.py  models.py  services.py
backend/moderation/: __init__.py  actions.py  apps.py  choices.py  forms.py  models.py  services.py
backend/room/: __init__.py  actions.py  apps.py  choices.py  forms.py  models.py  querysets.py  services.py
backend/tests/: service_base.py  utils.py
base/: models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_alter_room_id.py  0003_topic_room_host_alter_room_id_message_room_topic.py
base/views/: auth_views.py  error_views.py  room_views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py
core/: consumers.py  forms.py  models.py  routing.py  urls.py
core/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_room_participants.py  0002_user_bio_user_name_alter_user_email.py  0003_alter_message_id.py  0003_alter_room_host_alter_user_bio.py  0003_user_avatar.py  0004_alter_message_options_alter_message_user_and_more.py  0004_alter_user_avatar_alter_user_id.py  0004_room_slug_alter_room_description_alter_user_avatar_and_more.py  0005_alter_room_participants.py  0005_user_slug_alter_room_slug.py  0006_alter_room_topic.py  0006_alter_room_unique_together.py  0007_alter_room_unique_together_room_unique_room_per_host.py
core/views/: auth.py  auth_views.py  errors.py  main.py  main_views.py  room_views.py  rooms.py
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile  nginx.conf
docker/loki/: loki.yml
docker/nginx/: .htpasswd.prometheus.example  Dockerfile  entrypoint.sh  nginx.conf
docker/prometheus/: prometheus.yml
docker/promtail/: promtail.yml
docs/: API-Documentation.md  Application-Setup.md  Authentication-System.md  Backend-Architecture.md  Backend-Development-Guide.md  Component-Library.md  Configuration.md  Core-Features.md  Data-Models-and-Forms.md  Database-Design.md  Deployment-and-Infrastructure.md  Docker-Configuration.md  Frontend-Architecture.md  Frontend-Development-Guide.md  GraphQL-Mutations.md  GraphQL-Queries.md  Infrastructure-Setup.md  LOCALIZATION.md  Overview.md  README.md  Real-time-Communication.md  Real-time-Messaging.md  Room-Management.md  State-Management.md  System-Architecture.md  Testing.md  User-Management.md  WebSocket-API.md
edusphere/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  README.md  eslint.config.ts  globals.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.js  main.ts
scripts/: installation.md  run.sh  setup.sh  test.sh
static/: style.css
static/css/: errors.css  flash-messages.css  messages.css  style.css
static/js/: flash-messages.js  messages.js  script.js
templates/: home.html  main-error.html  main.html  room.html
templates/components/: activity-component.html  activity.html  delete-assets.html  feed-component.html  feed.html  main.html  navbar.html  topic-component.html  topics.html
templates/core/: _room-form.html  _room.html  activity.html  home.html  login-register.html  login.html  register.html  room-form.html  room.html  topics.html  update-user.html  user-profile.html
templates/errors/: 400.html  403.html  404.html  500.html
(+323 files in other folders)
