[tool.poetry]
name = "edusphere"
version = "0.1.0"
description = ""
authors = ["Robert Potemkin <rp00549@rvt.lv>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
channels-redis = "^4.3.0"
dj-database-url = "^3.0.1"
django-cleanup = "^9.0.0"
django-cors-headers = "^4.9.0"
django-environ = "^0.12.0"
django-graphql-jwt = "^0.4.0"
django-filter = "^25.2"
djangorestframework = "^3.16.1"
graphene = "^3.4.3"
graphene-file-upload = "^1.3.0"
httptools = "^0.7.1"
pillow = "^12.0.0"
psycopg2 = "^2.9.11"
python-dotenv = "^1.2.1"
pyyaml = "^6.0.3"
sniffio = "^1.3.1"
uvicorn = "^0.40.0"
uvloop = "^0.22.1"
watchfiles = "^1.1.1"
websockets = "^15.0.1"

[tool.poetry.group.typecheck]
optional = true

[tool.poetry.group.typecheck.dependencies]
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.8"}
mypy = "^1.19.1"

[tool.django-stubs]
django_settings_module = "backend.config.settings"



[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
coverage = "^7.13.0"
daphne = "^4.2.1"
pytest = "^9.0.2"
pytest-django = "^4.11.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.config.settings"
python_files = ["test_*.py"]
testpaths = ["backend"]
addopts = "-ra"
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "services: Service-layer tests",
  "role-advanced: Legacy Django tag (normalized to role_advanced)",
  "role_advanced: Advanced role service tests",
  "invite-advanced: Legacy Django tag (normalized to invite_advanced)",
  "invite_advanced: Advanced invite service tests",
  "error-handling: Legacy Django tag (normalized to error_handling)",
  "error_handling: Error handling tests",
]
filterwarnings = [
  "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated.*:DeprecationWarning:graphql_jwt\\..*",
]

[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
  "*/venv/*",
  "*/tests/*",
  "*/migrations/*",
  "*/__init__.py",
  "*/__main__.py",
  "*/manage.py",
  "*/asgi.py",
  "*/wsgi.py",
  "*/admin.py",
  "*/urls.py",
  "*/apps.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = [
  "*/venv/*",
  "*/tests/*",
  "*/migrations/*",
  "*/__init__.py",
  "*/__main__.py",
  "*/manage.py",
  "*/asgi.py",
  "*/wsgi.py",
  "*/admin.py",
  "*/urls.py",
  "*/apps.py",
]



[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
ruff = "^0.14.10"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
# Hmmm
disable_error_code = "annotation-unchecked"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
plugins = ["mypy_django_plugin.main"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
